--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
       <h1>Word Guessing Game</h1>
       <p>Wins: <span id="wins">0</span></p>
       <p>Losses: <span id="losses">0</span></p>
-      <button onclick="startGame()">Start Game</button>
-      <div class="word-list hidden">
+      <div class="word-list">
         <p>Possible words:</p>
         <ul id="possible-words"></ul>
       </div>
+      <button onclick="startGame()">Start Game</button>
     </div>
-    <div class="game-screen hidden">
+    <div class="game-screen" style="display: none;">
       <p>Time left: <span id="timer">20</span> seconds</p>
-      <p>Guesses left: <span id="attempts">10</span></p>
+      <p>Attempts left: <span id="attempts">10</span></p>
       <p>Guess the word:</p>
       <div id="word-container"></div>
     </div>
@@ -28,4 +28,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
+
 
